--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@ const powerPlayTasksByTheme = {
         { task: "Increase Power by 1 through Construction", points: "x3" },
         { task: "Use 1 min(s) of Speedups on Construction", points: "x42" },
         { task: "Earn 1 Diamonds through bundle purchases", points: "x60" },
+    ],
+    "Behemoth Growth": [
+        { task: "Use 1 Behemoth Cell(s)", points: "x2800" },
+        { task: "Every 100 Behemoth EXP gained in a single attempt", points: "x200" },
+        { task: "Earn 1 Diamonds through bundle purchases", points: "x60" },
     ]
 };
 
