--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 
         <!-- Footer -->
         <footer class="text-center text-gray-500 p-4">
-            <p class="text-xs mt-2">Disclaimer: This tool is a fan-made project and is not affiliated with the official developers of Tiles Survive!. Information is subject to change based on game updates.</p>
+            <p class="text-xs mb-2">© 2025 - Made by Syfler from WSU Alliance (We Showed Up), State #9.</p>
+            <p class="text-xs">Disclaimer: This tool is a fan-made project and is not affiliated with the official developers of Tiles Survive!. Information is subject to change based on game updates.</p>
         </footer>
     </div>
 </div>
