--- a/index.html
+++ b/index.html
@@ -173,7 +173,25 @@ const allianceDuelTasks = {
     ],
     "Day 3": [{ task: "Use 1 min(s) of Speedups on Research", points: "+625" }, { task: "Increase Power by 1 through Research", points: "+10" }, { task: "Spend 1 Clash Medal(s)", points: "+5000" }, { task: "Complete 1 Intel Mission(s)", points: "+75,000" }, { task: "Earn 1 Diamonds through bundle purchases", points: "+20" }, { task: "Every 100 Behemoth EXP gained in a single attempt", points: "+2,000" }, { task: "Use 1 Behemoth Cell(s)", points: "+24,000" },],
     "Day 4": [{ task: "Perform 1 Targeted Draft(s)", points: "+33,500" }, { task: "Perform 1 Advanced Recruitment(s)", points: "+7,500" }, { task: "Perform 1 Standard Recruitment(s)", points: "+1,250" }, { task: "Use a Legendary Hero Fragment", points: "+30,400" }, { task: "Use an Epic Hero Fragment", points: "+3,200" }, { task: "Use a Rare Hero Fragment", points: "+320" }, { task: "Use 1 Hero Skill Manual(s)", points: "+5,000" }, { task: "Earn 1 Diamonds through bundle purchases", points: "+20" },],
-    "Day 5": [{ task: "Complete 1 Intel Mission(s)", points: "+93,750" }, { task: "Use 1 min(s) of Speedups on Construction", points: "+625" }, { task: "Increase Power by 1 through Construction", points: "+22" }, { task: "Use 1 min(s) of Speedups on Research", points: "+625" }, { task: "Increase Power by 1 through Research", points: "+10" }, { task: "Use 1 min(s) of Speedups on Troop Training/Upgrading", points: "+625" }, { task: "Train a Lv. 1 Soldier", points: "+14" }, { task: "Train a Lv. 2 Soldier", points: "+25" }, { task: "Train a Lv. 3 Soldier", points: "+39" }, { task: "Train a Lv. 4 Soldier", points: "+51" }, { task: "Train a Lv. 5 Soldier", points: "+61" }, { task: "Train a Lv. 6 Soldier", points: "N/A" }, { task: "Train a Lv. 7 Soldier", points: "N/A" }, { task: "Train a Lv. 8 Soldier", points: "N/A" }, { task: "Train a Lv. 9 Soldier", points: "N/A" }, { task: "Train a Lv. 10 Soldier", points: "N/A" },],
+    "Day 5": [
+        { task: "Complete 1 Intel Mission(s)", points: "+93750" },
+        { task: "Use 1 min(s) of Speedups on Construction", points: "+625" },
+        { task: "Increase Power by 1 through Construction", points: "+22" },
+        { task: "Use 1 min(s) of Speedups on Research", points: "+625" },
+        { task: "Increase Power by 1 through Research", points: "+10" },
+        { task: "Use 1 min(s) of Speedups on Troop Training/Upgrading", points: "+625" },
+        { task: "Train a Lv. 1 Soldier", points: "+15" },
+        { task: "Train a Lv. 2 Soldier", points: "+27" },
+        { task: "Train a Lv. 3 Soldier", points: "+42" },
+        { task: "Train a Lv. 4 Soldier", points: "+55" },
+        { task: "Train a Lv. 5 Soldier", points: "+65" },
+        { task: "Train a Lv. 6 Soldier", points: "+82" },
+        { task: "Train a Lv. 7 Soldier", points: "+92" },
+        { task: "Train a Lv. 8 Soldier", points: "+110" },
+        { task: "Train a Lv. 9 Soldier", points: "+130" },
+        { task: "Train a Lv. 10 Soldier", points: "+150" },
+        { task: "Earn 1 Diamonds through bundle purchases", points: "+20" }
+    ],
     "Day 6": [{ task: "Collect 1 Flawed Sandworm Egg in Burrow Conquest", points: "+5,000" }, { task: "Collect 1 Fresh Sandworm Egg in Burrow Conquest", points: "+50,000" }, { task: "Collect 1 Perfect Sandworm Egg in Burrow Conquest", points: "+500,000" }, { task: "Dispatch 1 A-class truck(s)", points: "+100,000" }, { task: "Perform 1 S-tier task(s) in Dire Dispatch", points: "+150,000" }, { task: "Use 1 min(s) of Speedups on Construction", points: "+625" }, { task: "Use 1 min(s) of Speedups on Research", points: "+625" }, { task: "Use 1 min(s) of Speedups on Troop Training/Upgrading", points: "+625" }, { task: "Use 1 minute(s) of Healing Speedups", points: "+625" }, { task: "Defeat 1 Lv. 1 troop in burrows, cities, or Arcadia", points: "+4" }, { task: "Defeat 1 Lv. 2 troop in burrows, cities, or Arcadia", points: "+9" }, { task: "Defeat 1 Lv. 3 troop in burrows, cities, or Arcadia", points: "N/A" }, { task: "Defeat 1 Lv. 4 troop in burrows, cities, or Arcadia", points: "N/A" }, { task: "Defeat 1 Lv. 5 troop in burrows, cities, or Arcadia", points: "N/A" }, { task: "Defeat 1 Lv. 6 troop in burrows, cities, or Arcadia", points: "N/A" }, { task: "Defeat 1 Lv. 7 troop in burrows, cities, or Arcadia", points: "N/A" }, { task: "Defeat 1 Lv. 8 troop in burrows, cities, or Arcadia", points: "N/A" }, { task: "Defeat 1 Lv. 9 troop in burrows, cities, or Arcadia", points: "N/A" }, { task: "Defeat 1 Lv. 10 troop in burrows, cities, or Arcadia", points: "N/A" },],
 };
 
