--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         </div>
                         <div class="bg-blue-900/30 border border-blue-500 rounded-lg p-3">
                             <p class="text-sm">
-                                <strong class="font-semibold text-blue-300">Point information:</strong> Points below assume all Alliance Duel tech research is at 100%, except for "Focus - Training" (Lv. 7/10) and "Focus - Kills" (Lv. 7/10).
+                                <strong class="font-semibold text-blue-300">Point information:</strong> Points below assume Alliance Duel tech research is at 100%.
                             </p>
                         </div>
                     </div>
