--- a/index.html
+++ b/index.html
@@ -264,7 +264,20 @@ const turboTurtleTasks = {
     "Phase 3": [{ task: "Use 1 Behemoth Cell(s)", points: "+20,000" }, { task: "Every 100 Behemoth EXP gained in a single attempt", points: "+1,000" }, { task: "Use 1 min(s) of Speedups on Research", points: "+700" }, { task: "Earn 1 Diamonds through bundle purchases", points: "+400" },],
     "Phase 4": [{ task: "Spend Draft Vouchers on Hero Recruitment 1 time(s)", points: "+20,000" }, { task: "Spend Advanced Recruitment Tokens on Hero Recruitment 1 time(s)", points: "+8,000" }, { task: "Spend Standard Recruitment Tokens on Hero Recruitment 1 time(s)", points: "+2,000" }, { task: "Use a Legendary Hero Fragment", points: "+35,000" }, { task: "Use an Epic Hero Fragment", points: "+9,000" }, { task: "Use a Rare Hero Fragment", points: "+3,000" }, { task: "Use 1 Hero Skill Manual(s)", points: "+2,500" }, { task: "Earn 1 Diamonds through bundle purchases", points: "+400" },],
     "Phase 5": [{ task: "Use 1 Adhesive", points: "+3,000" }, { task: "Use 1 Chief Gear Design(s)", points: "+150,000" }, { task: "Use 100 points of Gear Scraps", points: "+4,000" }, { task: "Use 400 points of Gear Scraps", points: "+16,000" }, { task: "Use 2,000 points of Gear Scraps", points: "+80,000" }, { task: "Use 10,000 points of Gear Scraps", points: "+400,000" }, { task: "Earn 1 Diamonds through bundle purchases", points: "+400" },],
-    "Phase 6": [{ task: "Use 1 min(s) of Speedups on Research", points: "+700" }, { task: "Train or Upgrade Troops", points: "N/A" }, { task: "Earn 1 Diamonds through bundle purchases", points: "+400" },],
+    "Phase 6": [
+        { task: "Use 1 min(s) of Speedups on Research", points: "+700" },
+        { task: "Train a Lv. 1 Soldier", points: "+32" },
+        { task: "Train a Lv. 2 Soldier", points: "+55" },
+        { task: "Train a Lv. 3 Soldier", points: "+90" },
+        { task: "Train a Lv. 4 Soldier", points: "+115" },
+        { task: "Train a Lv. 5 Soldier", points: "+144" },
+        { task: "Train a Lv. 6 Soldier", points: "+190" },
+        { task: "Train a Lv. 7 Soldier", points: "+240" },
+        { task: "Train a Lv. 8 Soldier", points: "+340" },
+        { task: "Train a Lv. 9 Soldier", points: "+540" },
+        { task: "Train a Lv. 10 Soldier", points: "+1,200" },
+        { task: "Earn 1 Diamonds through bundle purchases", points: "+400" }
+    ],
     "Phase 7": [ { task: "Use 1 min(s) of Speedups on Construction", points: "+700" }, { task: "Use 1 min(s) of Speedups on Research", points: "+700" }, { task: "Spend Draft Vouchers on Hero Recruitment 1 time(s)", points: "+20,000" }, { task: "Spend Advanced Recruitment Tokens on Hero Recruitment 1 time(s)", points: "+8,000" }, { task: "Spend Standard Recruitment Tokens on Hero Recruitment 1 time(s)", points: "+2,000" }, { task: "Use a Legendary Hero Fragment", points: "+35,000" }, { task: "Use an Epic Hero Fragment", points: "+9,000" }, { task: "Use a Rare Hero Fragment", points: "+3,000" }, { task: "Use 1 Hero Skill Manual(s)", points: "+2,500" }, { task: "Use 100 points of Gear Scraps", points: "+4,000" }, { task: "Use 400 points of Gear Scraps", points: "+16,000" }, { task: "Use 2,000 points of Gear Scraps", points: "+80,000" }, { task: "Use 10,000 points of Gear Scraps", points: "+400,000" }, { task: "Use 1 Behemoth Cell(s)", points: "+20,000" }, { task: "Every 100 Behemoth EXP gained in a single attempt", points: "+1,000" }, { task: "Use 1 Adhesive", points: "+3,000" }, { task: "Use 1 Chief Gear Design(s)", points: "+150,000" }, { task: "Kill Lv. 1-6 Infected", points: "+10,000" }, { task: "Kill Lv. 7-12 Infected", points: "+10,500" }, { task: "Kill Lv. 13-18 Infected", points: "+11,000" }, { task: "Kill Lv. 19-24 Infected", points: "+11,500" }, { task: "Kill Lv. 25-30 Infected", points: "+12,000" }, { task: "Rally Lv. 1-30 Infected Fiend", points: "+30,000" }, { task: "Kill an Infected via Intel", points: "+60,000" }, { task: "Gather 100 Food", points: "+2" }, { task: "Gather 100 Wood", points: "+2" }, { task: "Gather 20 Metal", points: "+2" }, { task: "Gather 5 Gas", points: "+2" }, { task: "Earn 1 Diamonds through bundle purchases", points: "+400" }, ],
 };
 
